--- a/9-todolist/index.html
+++ b/9-todolist/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./script.js"></script>
+    <script defer src="./script2.js"></script>
   </head>
   <body>
     <h1 class="title">
@@ -27,7 +27,7 @@
       >
     </div>
     <div>
-      <button id="btn" onclick="onBtnClick()">
+      <button id="btn">
         Add item
       </button>
     </div>
